# quick-discord-bot

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: build.yaml
lists/: actor.txt  actress.txt  adj.txt  adv.txt  direct.txt  event.txt  genre.txt  geo.txt  indoor.txt  job.txt  kidactor.txt  kidactress.txt  lname.txt  movie.txt  namef.txt  namem.txt  noun.txt  num.txt  outdoor.txt  period.txt  relatef.txt  relatem.txt  synopsis.txt  thing.txt  title.txt  vef.txt  vepl.txt  vof.txt  vom.txt  vopl.txt  vpf.txt  vplf.txt  vplpl.txt  vpm.txt  vppl.txt  vtm.txt  vtpl.txt
src/: handler.rs  lazy_statics.rs  lib.rs  main.rs
src/clients/digital_ocean/: droplets.rs  mod.rs
src/clients/digital_ocean/deployments/: mod.rs
src/clients/digital_ocean/deployments/cloud-init/: helloworld.yaml
src/clients/digital_ocean/models/: droplet.rs  droplet_create.rs  image.rs  mod.rs  networks.rs  region.rs
src/commands/: mod.rs  movie.rs
src/commands/slash/: chatgpt.rs  mod.rs  ping.rs
src/commands/slash/events/: event.rs  kf2.rs  mod.rs
src/commands/slash/general/: mod.rs
src/commands/tilde/: mod.rs
src/commands/witty/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs  syllables.rs
src/utils/interactions/: constants.rs  mod.rs
src/utils/optl/: mod.rs
