[package]
name = "quick-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
reqwest = "0.11"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html-escape = "0.2"
regex = "1.5"
maplit = "1.0"
image-conv = "0.3.0"
photon-rs = "0.3.1"
chrono = "0.4"
image = "0.24"
